# GIAIC-Q3-Assignments-Projects

03_personal_library_manager/: library.json  pyproject.toml
03_personal_library_manager/src/library_manager/: main.py
04_assignments/assignments01/01_basics/: 00_joke_bot.py  01_double_it.py  04_random_numbers.py
04_assignments/assignments0to5/00_intro_python/: 02_agreement_bot.py  03_fahrenheit_to_celsius.py  05_triangle_perimeter.py  06_square_number.py
04_assignments/assignments0to5/01_expressions/: 04_pythagorean_theorem.py  05_remainder_division.py
04_assignments/assignments0to5/02_lists/: 01_add_many_number.py  02_double_list.py  03_erase_canvas.py  05_get_first_element.py  06_get_last_element.py
04_assignments/assignments0to5/03_if_statements/: 02_international_voting_age.py  03_leap_year.py  04_tall_enough_to_ride.py  05_random_numbers.py
04_assignments/assignments0to5/04_dictionaries/: 00_count_nums.py  03_powerful_passwords.py
04_assignments/assignments0to5/05_loops_control_flow/: 04_liftoff.py
04_assignments/assignments0to5/06_functions/: 01_chaotic_counting.py  02_count_even.py  04_double.py  05_get_name.py  09_sentence_generator.py  10_print_ones_digit.py
04_assignments/assignments0to5/07_information_flow/: 01_greetings.py  5_subtract_7.py
04_assignments/assignments1to6/Project 1 Mad libs Python Project/: madlibs.py
06_Build_Compose_and_Decorate_A_Complete_Traditional_OOP_Practice_Series/: 1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  2.py  20.py  21.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
(+32 files in other folders)
