[project]
name = "library-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "AAliKKhan", email = "muhammda014@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
library-manager = "library_manager:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
